--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
 	"name": "svelte-kit-starter",
 	"version": "0.0.1",
 	"private": true,
+	"prisma": {
+		"seed": "npx vite-node prisma/seed.ts"
+	},
 	"scripts": {
 		"dev": "vite dev",
 		"build": "vite build",
@@ -23,6 +26,7 @@
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
+		"prisma": "^4.11.0",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.2.7",
@@ -32,6 +36,7 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@prisma/client": "^4.11.0",
 		"daisyui": "^2.51.3"
 	}
 }
