--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
 		"seed": "npx vite-node prisma/seed.ts"
 	},
 	"scripts": {
-		"dev": "vite dev",
+		"dev": "npm-run-all --parallel vite typesafe-i18n",
+		"vite": "vite dev",
+		"typesafe-i18n": "typesafe-i18n",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -23,6 +25,7 @@
 		"eslint": "^8.28.0",
 		"eslint-config-prettier": "^8.5.0",
 		"eslint-plugin-svelte3": "^4.0.0",
+		"npm-run-all": "^4.1.5",
 		"postcss": "^8.4.21",
 		"prettier": "^2.8.0",
 		"prettier-plugin-svelte": "^2.8.1",
@@ -31,6 +34,7 @@
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.2.7",
 		"tslib": "^2.4.1",
+		"typesafe-i18n": "^5.24.2",
 		"typescript": "^4.9.3",
 		"vite": "^4.0.0"
 	},
