--- a/package.json
+++ b/package.json
@@ -40,8 +40,11 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@lucia-auth/adapter-prisma": "^0.5.3",
+		"@lucia-auth/sveltekit": "^0.6.9",
 		"@prisma/client": "^4.11.0",
 		"daisyui": "^2.51.3",
+		"lucia-auth": "^0.8.0",
 		"zod": "^3.21.4"
 	}
 }
