--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
 		"@prisma/client": "^4.11.0",
 		"daisyui": "^2.51.3",
 		"lucia-auth": "^0.8.0",
+		"svelte-french-toast": "^1.0.3",
 		"zod": "^3.21.4"
 	}
 }
