--- a/package.json
+++ b/package.json
@@ -6,9 +6,10 @@
 		"seed": "npx vite-node prisma/seed.ts"
 	},
 	"scripts": {
-		"dev": "npm-run-all --parallel vite typesafe-i18n",
+		"dev": "npm-run-all --parallel vite typesafe-i18n prisma:studio",
 		"vite": "vite dev",
 		"typesafe-i18n": "typesafe-i18n",
+		"prisma:studio": "npx prisma studio --browser none",
 		"build": "vite build",
 		"preview": "vite preview",
 		"check": "svelte-kit sync && svelte-check --tsconfig ./tsconfig.json",
@@ -31,6 +32,7 @@
 		"prettier-plugin-svelte": "^2.8.1",
 		"prettier-plugin-tailwindcss": "^0.2.4",
 		"prisma": "^4.11.0",
+		"prisma-erd-generator-markdown": "^1.3.1",
 		"svelte": "^3.54.0",
 		"svelte-check": "^3.0.1",
 		"tailwindcss": "^3.2.7",
