--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
 	"devDependencies": {
 		"@sveltejs/adapter-node": "^1.2.1",
 		"@sveltejs/kit": "^1.5.0",
+		"@types/uuid": "^9.0.1",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
 		"@typescript-eslint/parser": "^5.45.0",
 		"autoprefixer": "^10.4.13",
@@ -43,12 +44,14 @@
 	},
 	"type": "module",
 	"dependencies": {
+		"@aws-sdk/client-s3": "^3.289.0",
 		"@lucia-auth/adapter-prisma": "^0.5.3",
 		"@lucia-auth/sveltekit": "^0.6.9",
 		"@prisma/client": "^4.11.0",
 		"daisyui": "^2.51.3",
 		"lucia-auth": "^0.8.0",
 		"svelte-french-toast": "^1.0.3",
+		"uuid": "^9.0.0",
 		"zod": "^3.21.4"
 	}
 }
