--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
 	"type": "module",
 	"dependencies": {
 		"@aws-sdk/client-s3": "^3.289.0",
+		"@aws-sdk/s3-request-presigner": "^3.290.0",
 		"@lucia-auth/adapter-prisma": "^0.5.3",
 		"@lucia-auth/sveltekit": "^0.6.9",
 		"@prisma/client": "^4.11.0",
