--- a/.env.example
+++ b/.env.example
@@ -9,7 +9,11 @@ DB_DATABASE=svelte_kit_db
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
+# development env (localhost)
 DATABASE_URL="postgresql://${DB_USERNAME}:${DB_PASSWORD}@localhost:${DB_PORT}/${DB_DATABASE}"
+
+# production env (DB_HOST)
+# DATABASE_URL="postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}"
 
 STORAGE_API_PORT=9000
 STORAGE_CONSOLE_PORT=9001
