--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -25,6 +25,7 @@ services:
     restart: always
     ports:
       - $APP_PORT:$APP_PORT
+    env_file: ./environments/development.env
     volumes:
       - .:/svelte-kit-app
 
