--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
 		"format": "prettier --plugin-search-dir . --write ."
 	},
 	"devDependencies": {
+		"@iconify/icons-mdi": "^1.2.44",
+		"@iconify/svelte": "^3.1.0",
 		"@sveltejs/adapter-node": "^1.2.1",
 		"@sveltejs/kit": "^1.5.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
