--- a/.env.example
+++ b/.env.example
@@ -3,16 +3,12 @@ NODE_ENV=development
 APP_ENV=development
 APP_PORT=3000
 
-DB_HOST=svelte-kit-db
+DB_HOST=localhost
 DB_PORT=5432
 DB_DATABASE=svelte_kit_db
 DB_USERNAME=postgres
 DB_PASSWORD=postgres
 
-# local env (localhost)
-DATABASE_URL="postgresql://${DB_USERNAME}:${DB_PASSWORD}@localhost:${DB_PORT}/${DB_DATABASE}"
-
-# Docker env (DB_HOST)
 DATABASE_URL="postgresql://${DB_USERNAME}:${DB_PASSWORD}@${DB_HOST}:${DB_PORT}/${DB_DATABASE}"
 
 STORAGE_API_PORT=9000
