use sveltekit-superforms

--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
 		"daisyui": "^2.51.3",
 		"lucia-auth": "^0.8.0",
 		"svelte-french-toast": "^1.0.3",
+		"sveltekit-superforms": "^0.7.1",
 		"zod": "^3.21.4"
 	}
 }
